143 fixes
* Implemented a temporary online fix to the context menu navigation button icons
* Adjusted 'bookmark page' context menu entry icon size
* Fixed new tab button overlapping with pinned tabs
* Fixed urlbar-background styles not being applied
* Fixed app panel separator using incorrect styling
* Updated the syntax for the [hidden] attribute
* Hide-with-1-tab tweak now uses native implementation of titlebar buttons in the navbar
* Restored the proper background color to the internal browser pages, which had been changed to white/purple as of FF 143

- Removed about:config wet floor sign

--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -663,6 +663,8 @@
 
 		--prefs-table-border-width: 0 !important;
 		--main-margin-start: unset !important;
+		
+		background-color: light-dark(rgba(255,255,255,.45),rgba(58,58,58,.25)) !important;
 
 		scrollbar-color:
 			light-dark(rgb(37 37 37 / .4), rgb(255 255 255 / .4))
@@ -859,6 +861,10 @@
 			background-color: var(--textButtonPressed) !important;
 			fill: var(--textPressed) !important;
 		}
+	}
+	
+	.config-background {
+		display: none !important;
 	}
 
 	/* Parts restyling */
